Added security and Extracted Jwt token generated by okta to fetch user email

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@ target/
 *.iml
 *.ipr
 
+### Application Properties ###
+application.properties
+
+# environment-specific properties files(if any)
+application-*.properties
+
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
